--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,8 +13,8 @@ nav a {
 h1 {
     color: darkblue;
 }
-/* This line references all of the img elements */
-img {
+/* This line references all of the img elements// I changed it to only affect the images under the main element */
+main img {
     width: 150px;
     height: auto;
     border: 1px solid black;
@@ -23,5 +23,30 @@ img {
 }
 /* This line references all paragraph elements */
 p {
-    padding: 10px;
+    padding: 0;
+}
+
+main {
+    max-width:840px; 
+}
+
+aside {
+    width:20rem;
+    margin: 1rem;
+    border: 1px solid rgb(255 255 255 / 0.2);
+    padding: 1rem;
+    background-color: #eee;
+    color: #333;
+    text-align: center;
+}
+
+aside img {
+    width: 200px;
+    height: auto;
+}
+
+footer {
+    margin-top: 20rem;
+    border-top: 20rem solid #000;
+    text-align: center;
 }
